--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@ body {
     padding: 0px;
 }
 
-header {
-    padding: 75px 0px;
+ul {
+  list-style: none;
+  margin: 0px;
+}
+
+a {
+  text-decoration: none;
 }
 
 header ul {
@@ -49,7 +54,7 @@ h1,h2,h3,h4,h5,h6 {
   display: flex;
   flex-direction: row;
   background: #fff;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+  /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);*/
   height: 400px;
   padding: 30px;
   position: relative;
@@ -416,8 +421,8 @@ h1,h2,h3,h4,h5,h6 {
     margin: 0px;
 }
 
-#boards-area,#about-area,#product-area {
-  padding-top: 100px;
+#boards-area,#about-area,#product-area,#features-area,#gallery-area {
+  padding-top: 150px;
 }
 
 #boards-area h4 {
@@ -439,12 +444,13 @@ h1,h2,h3,h4,h5,h6 {
   justify-content: center;
 }
 
-.about-info h2, #product-area h2,#boards-area h2 {
+.about-info h2, #product-area h2,#boards-area h2, #gallery-area h2 {
   font-size: 3rem;
   color: #000;
   line-height: 3.6875rem;
   font-weight: 700;
-  text-transform: uppercase;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .about-info p {
@@ -559,10 +565,9 @@ footer h6 {
 }
 
 .footer-bg {
-  background-color: #000;
   color: white;
   padding: 100px;
-  margin: 5rem 0;
+  margin-top: 5rem;
 }
 
 .product-details h3 {
@@ -573,3 +578,243 @@ footer h6 {
   margin-top: 9rem;
 }
 
+#features-area h2,#product-area h2, #gallery-area h2, #about-area h2 {
+  font-family: 'Playfair Display';
+  font-weight: 600;
+  line-height: 1.42em;
+  font-style: italic;
+  font-size: 45px;
+  text-align: center;
+}
+
+#features-area h3,#product-area h3,#gallery-area h3 {
+  font-size: 36px;
+  font-weight: 700;
+  padding: 0px 0px 10px 0px;
+}
+
+#features-area h6, #product-area h6, #gallery-area h6,#about-area h6 {
+  margin: 0px 0px 6px;
+  color: rgb(126, 126, 126);
+  font-size: 16px;
+  line-height: 1.25em;
+  letter-spacing: 0px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+#features-area hr {
+  color: black;
+  margin-top: 1rem;
+}
+
+#features-area img {
+  width: 100%;
+}
+
+#features-area button {
+  padding: 20px 34px 20px 34px;
+  border: 1px solid #232323;
+  border-radius: 30px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1em;
+  letter-spacing: 0;
+  color: #232323;
+  background-color: white;
+  margin-top: 4rem;
+}
+
+.feature-types li a{
+  color: rgba( 35,35,35,0.44 );
+  padding: 23px 0px;
+  /*margin: 0% 5.6% 0% 0%;*/
+  width: fit-content;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.5;
+  cursor: pointer;
+}
+
+.features-text {
+  margin: 0px 0px 16px 0px;
+  font-size: 16px;
+  line-height: 1.875;
+  font-weight: 400;
+  color: #6B6B6B;
+}
+
+.feature-left,.feature-right{
+  width: 42.5%;
+}
+
+.feature {
+  padding: 15px 10px;
+  border-bottom: 1px solid #232323;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #232323;
+}
+
+img {
+  transition: all 2s ease-in-out;
+}
+
+img[data-src]:not(:hover) {
+  opacity: 1;
+}
+
+img[data-src]:hover {
+  opacity: 1;
+}
+
+.ev-filter.active {
+  color: #232323;
+  transition: all 1s ease-in-out;
+}
+
+header a {
+  color: #fff;
+  font-weight: 600;
+}
+
+header li {
+  font-weight: 600;
+}
+
+header a:hover {
+  color: #A6A182;
+  transition: all .3s ease-in-out;
+}
+
+.title{
+  font-family: 'Playfair Display', serif;
+  font-size: 4vw;
+  line-height: 1.3;
+  text-decoration: none;
+  color: #1d213f;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  text-align: center;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  #cursor {
+    z-index: 99;
+    position: fixed;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    will-change: transform;
+  }
+
+  #cursor .cursor--inner {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    border: solid 1px #1d213f;
+  }
+  
+  a:hover  .cursor--inner {
+    border: 1px dotted yellow;
+  }
+}
+
+  
+
+.flipper-container{
+  position:relative;
+  /*margin:35px auto;*/
+  /*perspective:1000;*/
+  /*width:450px;*/
+  height:100%;
+}
+.flip{
+  height:100%;
+  width:100%;
+  transform-style:preserve-3d;
+  transition:all 1s;
+}
+.flipper-container:hover .flip{
+  transform:rotateY(180deg);
+  /*box-shadow: 0px 10px 10px #aaa;*/
+}
+.face{
+  position:absolute;
+  height:100%;
+  width:100%;
+  backface-visibility:hidden;
+}
+.face.back {
+  display: block;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  color: #fff;
+  text-align: center;
+  background-color:#a6a182;
+  border-radius: 150px 150px 20px 20px;
+}
+.back h2{
+  padding:70px 0px;
+  font-family:Pacifico;
+  letter-spacing:1px;
+  font-size:30px;
+}
+
+.back p, .back li {
+  text-align: left;
+  font-size: 12px;
+  padding: 10px 0px;
+  border-bottom: 1px solid white;
+  text-transform: uppercase;
+}
+
+.back h5 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 1rem 0px;
+}
+
+#product-area img {
+  width: 100%;
+  border-radius: 150px 150px 20px 20px;
+}
+
+.urun-card {
+  background-color: #a6a182;
+  height: 500px;
+  padding: 15px 20px;
+  border-radius: 150px 150px 20px 20px;
+}
+
+.front h5 {
+  margin-top: 2rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+  color: white;
+  text-transform: uppercase;
+}
+
+.back ul {
+  padding: 0px 1.5rem;
+}
+
+#footer, header {
+  background-color: #1b1b1b;
+}
+
+#footer a {
+  color: white;
+}
+
+#gallery-area img {
+  object-fit: cover;
+}
+
+#about-area,#features-area,#product-area,#gallery-area,#footer  {
+  opacity: 0;
+  transition: opacity 3s;
+}
